--- a/app/views/list_item/_show.html.erb
+++ b/app/views/list_item/_show.html.erb
@@ -102,6 +102,12 @@
 
         <% if item.owned_by?(current_account) %>
           <div class='pb-5'></div>
+        <% elsif item.is_claimed? %>
+          <div class='col-12 mt-4 d-flex justify-content-end pb-3 pt-3'>
+            <%= link_to create_claim_path(item.id), method: :post, class: 'add-to-list btn' do %>
+              Ask to Share Claim
+            <% end %>
+          </div>
         <% elsif item.open? %>
           <div class='col-12 mt-4 d-flex justify-content-end pb-3 pt-3'>
             <%= link_to claim_path(item.id), method: :post, class: 'add-to-list btn' do %>
