--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -169,7 +169,7 @@ font-size: .7rem;
   padding: 1rem 2rem;
   border-radius: 15px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-  z-index: 99;
+  z-index: 9999999;
   font-weight: 600;
   font-size: 1rem;
   transform: translateX(0);
