--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,8 @@
       <div class='message-container'>
         <%= render partial: 'layouts/message' %>
       </div>
+      <div class='message-container d-none d-md-block'>
+      </div>
       <div id="list-item-modal" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" role="dialog"></div>
       <div id="view-modal" class="modal fade" role="dialog"></div>
       <div id="claim-requests-container"></div>
