--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -148,7 +148,7 @@
     padding: 1rem 2rem;
     border-radius: 15px;
     box-shadow: none;
-    z-index: 999999;
+    z-index: 99999999999;
     font-weight: 600;
     font-size: 1rem;
     transform: translateX(0);
