--- a/app/views/claim/_index.html.erb
+++ b/app/views/claim/_index.html.erb
@@ -1,4 +1,4 @@
-<div class='modal fade d-block modal-carousel' data-modal-carousel-modal-display-class='modal-display' data-controller='modal-carousel' data-modal-carousel-target='modal'>
+<div class='modal fade d-block modal-carousel' data-bs-backdrop="static" data-bs-keyboard="false" data-modal-carousel-modal-display-class='modal-display' data-controller='modal-carousel' data-modal-carousel-target='modal'>
   <div class='carousel' data-modal-carousel-target='slider'>
     <% requests.each_with_index do |claim, index| %>
       <div class='slide <%= index == requests.count - 1 ? 'last-slide' : '' %>'>
@@ -17,8 +17,12 @@
             </div>
 
             <div class="modal-body">
+              <div class='pills d-flex justify-content-between'>
+                  <div class='pill'>
+                    <span class='fw-normal me-1'>Reviewing</span> <%= index + 1 %> / <%= requests.count %>
+                  </div>
+              </div>
               <div class='row'>
-              
                 <div class='col-12'>
                   <div class='text-container'>
                     <label>Wisher</label>
@@ -50,7 +54,7 @@
                   <%= link_to deny_claim_request_path(claim.id, is_last_claim: index == requests.count - 1), class: 'btn btn-default cancel px-4 d-flex align-items-center', data: { remote: true, 'modal-carousel-target': 'nextButton', action: 'click->modal-carousel#deny' }, method: :post do %>
                     Deny
                   <% end %>
-                  <%= link_to accept_claim_request_path(id: claim.id, is_last_claim: index == requests.count - 1), class: 'btn btn-submit pill px-4', data: { remote: true, 'modal-carousel-target': 'nextButton', action: 'click->modal-carousel#accept' }, method: :post do %>
+                  <%= link_to accept_claim_request_path(id: claim.id, is_last_claim: index == requests.count - 1), class: 'btn btn-submit pill px-4 mt-0', data: { remote: true, 'modal-carousel-target': 'nextButton', action: 'click->modal-carousel#accept' }, method: :post do %>
                     Accept
                   <% end %>
                 </div>
@@ -65,6 +69,10 @@
 
 
 <style>
+
+.fw-normal {
+  font-weight: 400;
+}
 
 .slick-track,
 .slick-list {
@@ -88,7 +96,7 @@
 }
 
 .modal-carousel.show .modal-dialog {
-    transform: none;
+    transform: transform 0.3s ease-out;
 }
 
 .modal-spacer {
