--- a/app/views/list/index.html.erb
+++ b/app/views/list/index.html.erb
@@ -18,10 +18,10 @@
         <%= render partial: 'claim/request_card' %>
       <% end %>
       <% @list_items.each_with_index do |item, index| %>
-        <% if item.created_by?(current_account) && !item.owned_by?(current_account) %>
-          <%= render partial: 'list_item/editable_item', locals: { item: item } %>
-        <% elsif item.owned_by?(current_account) %>
+        <% if item.owned_by?(current_account) %>
           <%= render partial: 'list_item/my_item', locals: { item: item } %>
+        <% elsif item.created_by?(current_account) %>
+          <%= render partial: 'list_item/editable_item', locals: { item: item } %>
         <% else %>
           <%= render partial: 'list_item/item', locals: { item: item } %>
         <% end %>
