--- a/app/views/list_item/_editable_item.html.erb
+++ b/app/views/list_item/_editable_item.html.erb
@@ -12,11 +12,8 @@
           <% end %>
         </span>
       </div>
-      <div class='claimed-by'>
-        <% if item.created_by_someone_else? %>
-          <i class="fa-solid fa-gift me-2 blue-green"></i>Made by <strong><%= item.created_by.full_name %></strong>
-        <% end %>
-      </div>
+      
+      <%= render partial: 'list_item/status', locals: { item: item } %>
 
       <%= link_to show_list_item_path(item.id), class: 'no-link-style', remote: true do %> 
         <div class="head">
@@ -27,15 +24,7 @@
       <% end %>
       <div class="body">
         <%= render partial: 'list_item/price_range', locals: { item: item } %>
-        <span class='d-flex flex-row'>
-          <% if item.bought_by?(current_account) %>
-            <%= render partial: 'list_item/statuses/bought', locals: { item: item } %>
-          <% elsif item.claimed_by?(current_account) %>
-            <%= render partial: 'list_item/statuses/claimed', locals: { item: item, disabled: false } %>
-          <% elsif !item.is_claimed? %>
-            <%= render partial: 'list_item/statuses/unclaimed', locals: { item: item } %>
-          <% end %>
-        </span>
+        <%= render partial: 'list_item/actions/card', locals: { item: item } %>
       </div>
   
       <%= form_for :list_item, url: destroy_list_item_path(item.id), method: :delete, class: 'delete-item-form' do |f| %>
