--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -26,6 +26,11 @@ textarea {
   text-decoration: none;
 }
 
+.fw-normal {
+  font-weight: 400;
+}
+
+
 .cursor-text {
   pointer-events: none;
   cursor: text;
@@ -75,6 +80,16 @@ input:disabled, select:disabled {
 .created-by {
 margin-top: 0px;
 font-size: .7rem;
+}
+
+// colors
+
+.blue-green-dark {
+  color: #236d58;
+}
+
+.pink-red {
+  color: #db5f5f;
 }
 
 
@@ -491,7 +506,11 @@ textarea {
   font-size: .9rem;
 }
 
-
+.btn.small {
+  padding: 5px 15px;
+  font-size: .9rem;
+}
+  
 .light-box-shadow.card {
   box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.2)
 }
@@ -530,11 +549,6 @@ textarea {
   filter: drop-shadow(5px rgba(0, 0, 0, 0.3));
 }
 
-.action.delete-item {
-  left: 10px;
-  padding: 0;
-}
-
 .delete-item .icon-bg {
   color: #d75959;
 }
@@ -568,7 +582,7 @@ textarea {
 }
 
 .action.edit-item {
-  left: 55px;
+  left: 10px;
 }
 
 .item:hover .action {
@@ -594,7 +608,7 @@ textarea {
 
 .claimed-by {
   padding: 0 20px;
-  margin-top: -10px;
+  margin-top: -5px;
   font-size: .7rem;
 }
 
@@ -747,7 +761,7 @@ font-size: 1.5rem;
 .tags {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: -25px;
+  // margin-bottom: -25px;
 }
 
 
@@ -1058,4 +1072,48 @@ tr:last-of-type td {
 [type=checkbox]:checked::-ms-check {
   box-shadow: none;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E %3Cpath d='M15.88 8.29L10 14.17l-1.88-1.88a.996.996 0 1 0-1.41 1.41l2.59 2.59c.39.39 1.02.39 1.41 0L17.3 9.7a.996.996 0 0 0 0-1.41c-.39-.39-1.03-.39-1.42 0z' fill='%23fff'/%3E %3C/svg%3E");
+}
+
+// modal carousel
+
+.modal-carousel {
+  .slick-track, .slick-list {
+    -webkit-perspective: 2000;
+    -webkit-backface-visibility: hidden;
+  }
+  
+  .carousel, .slick-list, .slick-track, .slick-slide {
+    height: 100%;
+  }  
+}
+
+.modal-carousel.show {
+  .modal-dialog {
+    transform: transform 0.3s ease-out;
+  }
+}
+
+.modal-carousel {
+  visibility: hidden;
+}
+.modal-carousel.modal-display {
+  visibility: visible;
+}
+
+// claims
+
+.claim-request {
+  border-bottom: 10px solid #ededed;
+}
+
+.text-larger {
+  line-height: 2;
+    font-size: 1.2rem;
+}
+
+.icon-attention {
+  position: absolute;
+    right: -7px;
+    top: -7px;
+    font-size: 1.45rem;
 }
