--- a/app/views/list_item/actions/_view.html.erb
+++ b/app/views/list_item/actions/_view.html.erb
@@ -6,7 +6,7 @@
   </div>
 <% elsif item.denied_claimers.include?(current_account) %>
   <div class='col-12 mt-4 d-flex justify-content-end pb-3 pt-3 ask-to-share-container'>
-    <span class='brown-red fw-bold'><i class="fa-solid fa-ban me-3"></i>Your request to share was denied.</span>
+    <span class='brown-red fw-bold'><i class="fa-solid fa-ban me-3"></i>Your request was denied.</span>
   </div>
 <% elsif item.can_request_to_claim?(current_account) %>
   <div class='col-12 mt-4 d-flex justify-content-end pb-3 pt-3 ask-to-share-container'>
@@ -14,11 +14,11 @@
       Ask to Share Claim
     <% end %>
   </div>
-<% elsif item.open? %>
+<% elsif item.open? || item.claimed_by?(current_account) %>
   <div class='col-12 mt-4 d-flex justify-content-end pb-3 pt-3'>
-    <%= link_to claim_path(item.id), method: :post, class: 'add-to-list btn' do %>
-      Claim this Wish
-    <% end %>
+    <span class='claim-button-container'>
+      <%= render partial: 'list_item/claim_button', locals: { item: item } %>
+    </span>
   </div>
 <% else %>
   <div class='pb-5'></div>
