--- a/app/views/list_item/_editable_item.html.erb
+++ b/app/views/list_item/_editable_item.html.erb
@@ -1,5 +1,5 @@
 <div class="item-box brick col-12 col-md-6 col-lg-4 col-xl-3" data-controller='claim' data-claim-hover-class='item-hover' data-claim-hover-out-class='item-hover-out' data-claim-target='item'>
-    <div class='item' id='item-<%= item.id %>'>
+    <div class='item <%= item.secret ? 'secret-item' : '' %>' id='item-<%= item.id %>'>
       <div class="preheader">
         <span class='name'><%= item.list.account.full_name %></span>
         <span>
