--- a/app/views/list_item/_form_contents.html.erb
+++ b/app/views/list_item/_form_contents.html.erb
@@ -1,7 +1,7 @@
 <div class='row'>
   <div class='col-12 mb-3'>
     <%= f.label 'This wish is for:' %>
-    <%= f.select :list_id, options_for_select(account_list_options, action_name == 'new' ? current_account.current_list&.id : list_item.list&.id), { include_blank: false }, { class: 'form-select', disabled: !f.object.new_record? } %>
+    <%= f.select :list_id, options_for_select(account_list_options, action_name == 'new' ? current_account.current_list&.id : list_item.list&.id), { include_blank: false }, { class: 'form-select selected-list', disabled: !f.object.new_record? } %>
   </div>
 
   <div class='col-12 mb-3 mt-2'>
@@ -32,10 +32,15 @@
     <%= f.select :priority, options_for_select(priority_options, action_name == 'new' ? nil : list_item.priority), { include_blank: true }, class: 'form-select' %>
     <%= render_errors(list_item, :priority) %>
   </div>
-  <div class='col-12 mb-5 mt-2 mb-lg-5 mb-lg-3'>
+  <div class='col-12 mb-2 mt-2 mb-lg-3 mb-lg-3'>
     <%= f.label :tags %>
     <%= f.select :tag_ids, options_for_select(Tag.all.order(:name).map { |t| [t.name, t.id] }, list_item.tags.ids), { multiple: 'multiple' }, data: { target: 'select.multiselect'}, class: 'form-select multiselect-field' %>
   </div>
+  <div class='col-12 mt-2 hidden-input d-none'>
+    <%= render partial: 'list_item/statuses/secret_checkbox', locals: { f: f, list_item: list_item } %>
+  </div>
+  <div class='mb-lg-5 mb-lg-3'></div>
+
   <%= f.hidden_field :created_by_id, value: @current_account.id %>
   <div class='col-12 d-flex justify-content-between flex-row-reverse'>
     <%= f.submit 'Submit', class: 'btn submit' %>
@@ -44,3 +49,24 @@
     <% end %>
   </div>
 </div>
+
+<script>
+
+var initialValue = $('.selected-list').find(':selected').text()
+toggleInput($('.hidden-input'), initialValue)
+
+$('.selected-list').change(function() {
+  var value = $(this).find(':selected').text()
+  
+  toggleInput($('.hidden-input'), value)
+})
+
+function toggleInput(input, value) {
+  if (value != 'Myself') {
+    input.removeClass('d-none')
+  } else {
+    input.addClass('d-none')
+  }
+}
+
+</script>
