--- a/app/views/list_item/_form_contents.html.erb
+++ b/app/views/list_item/_form_contents.html.erb
@@ -39,7 +39,7 @@
   <div class='col-12 mt-2 hidden-input d-none'>
     <%= render partial: 'list_item/statuses/secret_checkbox', locals: { f: f, list_item: list_item } %>
   </div>
-  <div class='mb-lg-5 mb-lg-3'></div>
+  <div class='mb-4 mb-lg-5 mb-lg-3'></div>
 
   <%= f.hidden_field :created_by_id, value: @current_account.id %>
   <div class='col-12 d-flex justify-content-between flex-row-reverse'>
