--- a/app/views/list_item/_new.html.erb
+++ b/app/views/list_item/_new.html.erb
@@ -1,27 +1,22 @@
-<div class="modal-dialog modal-dialog-centered modal-lg">
-  <div class="modal-content">
+<div class='dismiss-modal'>
+  <i class="fa-solid fa-circle-xmark icon-dismiss"></i>
+</div>
 
-    <%= link_to :back, class: 'dismiss-modal' do %>
-      <i class="fa-solid fa-circle-xmark icon-dismiss"></i>
-    <% end %>
+<div class="modal-header">
+  <span class='text-center'>
+  <h3>Add Wish</h3>
+  <h6 class='font-weight-light'><%= @selected_group.name %></h6>
+  </span>
+</div>
 
-    <div class="modal-header">
-      <span class='text-center'>
-      <h3>Add Wish</h3>
-      <h6 class='font-weight-light'><%= @selected_group.name %></h6>
-      </span>
-    </div>
+<div class='d-block'>
+  <% if success %>
+    <%= render partial: 'list_item/mobile/success_message', locals: { message: 'You made a wish!' } %>
+  <% end %>
+</div>
 
-    <div class='d-block'>
-      <% if success %>
-        <%= render partial: 'list_item/mobile/success_message', locals: { message: 'You made a wish!' } %>
-      <% end %>
-    </div>
-
-    <div class="modal-body">
-      <%= form_with model: list_item, url: create_list_item_path, data: { remote: true, controller: 'nested-form', nested_form_wrapper_selector_value: '.nested-form-wrapper' } do |f| %>
-        <%= render partial: 'form_contents', locals: { f: f, list_item: list_item } %>
-      <% end %>
-    </div>
-  </div>
+<div class="modal-body">
+  <%= form_with model: list_item, url: create_list_item_path, data: { remote: true, controller: 'nested-form', nested_form_wrapper_selector_value: '.nested-form-wrapper' } do |f| %>
+    <%= render partial: 'form_contents', locals: { f: f, list_item: list_item } %>
+  <% end %>
 </div>
