--- a/app/views/list/index.html.erb
+++ b/app/views/list/index.html.erb
@@ -19,11 +19,11 @@
       <% end %>
       <% @list_items.each_with_index do |item, index| %>
         <% if item.owned_by?(current_account) %>
-          <%= render partial: 'list_item/my_item', locals: { item: item } %>
+          <%= render partial: 'list_item/item_inner', locals: { item: item } %>
         <% elsif item.created_by?(current_account) %>
-          <%= render partial: 'list_item/editable_item', locals: { item: item } %>
+          <%= render partial: 'list_item/item_inner', locals: { item: item } %>
         <% else %>
-          <%= render partial: 'list_item/item', locals: { item: item } %>
+          <%= render partial: 'list_item/item_inner', locals: { item: item } %>
         <% end %>
       <% end %>
     </div>
