--- a/app/views/list_item/actions/_my_actions.html.erb
+++ b/app/views/list_item/actions/_my_actions.html.erb
@@ -1,4 +1,4 @@
-<div class='pt-5 pb-3 d-flex justify-content-end' data-controller='confirmation'>
+<div class='pt-5 pb-3 d-flex justify-content-between' data-controller='confirmation'>
   <%= link_to destroy_list_item_path(item.id), 
       data: {
         turbo_method: "delete",
@@ -6,6 +6,11 @@
       } do |f| %>
     <div class='btn small add-to-list'>
       <i class="fa-solid fa-trash-can me-3"></i>Delete Wish
+    </div>
+  <% end %>
+  <%= link_to edit_list_item_path(item.id), class: '', remote: true do %>
+    <div class='btn small pill'>
+      <i class="fa-solid fa-pen-to-square me-3"></i>Edit Wish
     </div>
   <% end %>
 </div>
