--- a/app/views/list_item/actions/_my_actions.html.erb
+++ b/app/views/list_item/actions/_my_actions.html.erb
@@ -9,7 +9,7 @@
     </div>
   <% end %>
   <%= link_to edit_list_item_path(item.id), class: '', remote: true do %>
-    <div class='btn small pill'>
+    <div class='btn small pill mt-0 me-0'>
       <i class="fa-solid fa-pen-to-square me-3"></i>Edit Wish
     </div>
   <% end %>
